закомментил вывод через print, чтобы не загромождать экран

--- a/Yandex_contest/polynom.ipynb
+++ b/Yandex_contest/polynom.ipynb
@@ -1160,8 +1160,10 @@
     "\n",
     "predict = model.predict(trans_features_test)\n",
     "\n",
-    "for target in predict:\n",
-    "\tprint(target)"
+    "\n",
+    "# разкомментить для вывода\n",
+    "# for target in predict:\n",
+    "# \tprint(target)"
    ]
   },
   {
